[package]
name = "cosmos"
version = "0.1.0"
authors = ["zc <zhichuan.liang@shopee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.31.2", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
hostname = "0.1.5"
