[package]
name = "cosmos"
version = "0.1.0"
authors = ["zc <zhichuan.liang@shopee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.31.2", features = ["yaml"] }
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.8"
serde_json = "~1.0"
hostname = "~0.1.5"
slog = { version = "~2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "~2.4.2"
hyper = "~0.12.35"
shiplift = "~0.5"
tokio = "~0.1.22"
futures = "~0.1"
grpc            = "~0.6"
protobuf        = "~2"
futures-cpupool = "~0.1"
regex = "~1.3"

[build-dependencies]
protoc-rust-grpc = "~0.6"
